added a blank stylesheet

--- a/ProjektConnection/pages/register.html
+++ b/ProjektConnection/pages/register.html
@@ -5,6 +5,8 @@
     <title>Register New User</title>
   </head>
   <body>
-
+    <!--#include file="head.html" -->
+    <!-- page unique contents -->
+    <!--#include file="foot.html" -->
   </body>
 </html>
