--- a/ProjektConnection/pages/login.html
+++ b/ProjektConnection/pages/login.html
@@ -5,6 +5,8 @@
     <title>Log in</title>
   </head>
   <body>
-
+    <!--#include file="include_head.html" -->
+    <!-- page unique contents -->
+    <!--#include file="include_foot.html" -->
   </body>
 </html>
