--- a/ProjektConnection/pages/login.html
+++ b/ProjektConnection/pages/login.html
@@ -13,10 +13,10 @@
       <div class="flex-container" id="login-box">
           <h2>Please sign in:</h2>
           <form name="login_form" class="login-form" onsubmit="show_input()" method="post">
-            <label for="user">Username</label>
-            <input type="text" id="user" name="user"></input>
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password"></input>
+            <label for="user">Username:</label><br/>
+            <input type="text" id="user" name="user"></input><br/>
+            <label for="password">Password:</label><br/>
+            <input type="password" id="password" name="password"></input><br/>
             <input type="submit" value="Log in"></input>
           </form>
       </div>
